{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 200,
  "lineage": "370b3a46-8dc1-e1c1-3856-2a363060576d",
  "resources": [
    {
      "module": "module.main.module.network",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "driplet_backend",
      "provider": "module.main.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/regions/europe-west1/networkEndpointGroups/driplet-service-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-11-14T12:53:58.874-08:00",
            "enable_cdn": false,
            "fingerprint": "j_pVdHz9chw=",
            "generated_id": 1922738204471713161,
            "id": "projects/driplet-core-dev/global/backendServices/driplet-cloud-run-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "driplet-cloud-run-backend",
            "port_name": "http",
            "project": "driplet-core-dev",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/global/backendServices/driplet-cloud-run-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.main.module.api.google_project_service.artifact_registry",
            "module.main.module.api.google_project_service.bigquery",
            "module.main.module.api.google_project_service.cloud_run",
            "module.main.module.api.google_project_service.cloud_sql",
            "module.main.module.api.google_project_service.compute",
            "module.main.module.api.google_project_service.iam",
            "module.main.module.api.google_project_service.pubsub",
            "module.main.module.api.google_project_service.secret_manager",
            "module.main.module.api.google_project_service.service_networking",
            "module.main.module.compute.google_cloud_run_v2_service.driplet_service",
            "module.main.module.database.google_sql_database_instance.driplet_application_db",
            "module.main.module.database.google_sql_user.driplet_application_db_user",
            "module.main.module.database.random_password.driplet_application_db_password",
            "module.main.module.iam.google_service_account.driplet_service_account",
            "module.main.module.network.google_compute_region_network_endpoint_group.driplet_service_neg",
            "module.main.module.secrets.google_secret_manager_secret.oauth2_client_id",
            "module.main.module.secrets.google_secret_manager_secret.oauth2_client_secret",
            "module.main.module.secrets.google_secret_manager_secret.session_secret",
            "module.main.module.secrets.google_secret_manager_secret_iam_member.oauth2_client_id_member",
            "module.main.module.secrets.google_secret_manager_secret_iam_member.oauth2_client_secret_member",
            "module.main.module.secrets.google_secret_manager_secret_iam_member.session_auth_secret"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress",
      "provider": "module.main.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-14T11:58:14.543-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/driplet-core-dev/global/firewalls/allow-http-https",
            "log_config": [],
            "name": "allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/global/networks/driplet-vpc",
            "priority": 1000,
            "project": "driplet-core-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/global/firewalls/allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.module.api.google_project_service.artifact_registry",
            "module.main.module.api.google_project_service.bigquery",
            "module.main.module.api.google_project_service.cloud_run",
            "module.main.module.api.google_project_service.cloud_sql",
            "module.main.module.api.google_project_service.compute",
            "module.main.module.api.google_project_service.iam",
            "module.main.module.api.google_project_service.pubsub",
            "module.main.module.api.google_project_service.secret_manager",
            "module.main.module.api.google_project_service.service_networking",
            "module.main.module.network.google_compute_network.driplet_vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.network",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "new_loadbalancer_ip",
      "provider": "module.main.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.8.81.159",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-11-14T12:04:37.760-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/driplet-core-dev/global/addresses/loadbalancer-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "loadbalancer-ip",
            "prefix_length": 0,
            "project": "driplet-core-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/global/addresses/loadbalancer-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "dependencies": [
            "module.main.module.api.google_project_service.artifact_registry",
            "module.main.module.api.google_project_service.bigquery",
            "module.main.module.api.google_project_service.cloud_run",
            "module.main.module.api.google_project_service.cloud_sql",
            "module.main.module.api.google_project_service.compute",
            "module.main.module.api.google_project_service.iam",
            "module.main.module.api.google_project_service.pubsub",
            "module.main.module.api.google_project_service.secret_manager",
            "module.main.module.api.google_project_service.service_networking"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.network",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "driplet_http_forwarding_rule",
      "provider": "module.main.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/driplet-core-dev/global/forwardingRules/driplet-http-forwarding-rule",
            "ip_address": "34.8.81.159",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "driplet-http-forwarding-rule",
            "port_range": "80-80",
            "project": "driplet-core-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/global/forwardingRules/driplet-http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/global/targetHttpProxies/http-proxy"
          },
          "dependencies": [
            "module.main.module.api.google_project_service.artifact_registry",
            "module.main.module.api.google_project_service.bigquery",
            "module.main.module.api.google_project_service.cloud_run",
            "module.main.module.api.google_project_service.cloud_sql",
            "module.main.module.api.google_project_service.compute",
            "module.main.module.api.google_project_service.iam",
            "module.main.module.api.google_project_service.pubsub",
            "module.main.module.api.google_project_service.secret_manager",
            "module.main.module.api.google_project_service.service_networking",
            "module.main.module.compute.google_cloud_run_v2_service.driplet_service",
            "module.main.module.database.google_sql_database_instance.driplet_application_db",
            "module.main.module.database.google_sql_user.driplet_application_db_user",
            "module.main.module.database.random_password.driplet_application_db_password",
            "module.main.module.iam.google_service_account.driplet_service_account",
            "module.main.module.network.google_compute_backend_service.driplet_backend",
            "module.main.module.network.google_compute_global_address.new_loadbalancer_ip",
            "module.main.module.network.google_compute_region_network_endpoint_group.driplet_service_neg",
            "module.main.module.network.google_compute_target_http_proxy.driplet_http_proxy",
            "module.main.module.network.google_compute_url_map.driplet_url_map",
            "module.main.module.secrets.google_secret_manager_secret.oauth2_client_id",
            "module.main.module.secrets.google_secret_manager_secret.oauth2_client_secret",
            "module.main.module.secrets.google_secret_manager_secret.session_secret",
            "module.main.module.secrets.google_secret_manager_secret_iam_member.oauth2_client_id_member",
            "module.main.module.secrets.google_secret_manager_secret_iam_member.oauth2_client_secret_member",
            "module.main.module.secrets.google_secret_manager_secret_iam_member.session_auth_secret"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.network",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "driplet_https_forwarding_rule",
      "provider": "module.main.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/driplet-core-dev/global/forwardingRules/driplet-https-forwarding-rule",
            "ip_address": "34.8.81.159",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "driplet-https-forwarding-rule",
            "port_range": "443-443",
            "project": "driplet-core-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/global/forwardingRules/driplet-https-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/global/targetHttpsProxies/driplet-https-proxy"
          },
          "dependencies": [
            "module.main.module.api.google_project_service.artifact_registry",
            "module.main.module.api.google_project_service.bigquery",
            "module.main.module.api.google_project_service.cloud_run",
            "module.main.module.api.google_project_service.cloud_sql",
            "module.main.module.api.google_project_service.compute",
            "module.main.module.api.google_project_service.iam",
            "module.main.module.api.google_project_service.pubsub",
            "module.main.module.api.google_project_service.secret_manager",
            "module.main.module.api.google_project_service.service_networking",
            "module.main.module.compute.google_cloud_run_v2_service.driplet_service",
            "module.main.module.database.google_sql_database_instance.driplet_application_db",
            "module.main.module.database.google_sql_user.driplet_application_db_user",
            "module.main.module.database.random_password.driplet_application_db_password",
            "module.main.module.iam.google_service_account.driplet_service_account",
            "module.main.module.network.google_compute_backend_service.driplet_backend",
            "module.main.module.network.google_compute_global_address.new_loadbalancer_ip",
            "module.main.module.network.google_compute_managed_ssl_certificate.driplet_ssl_cert",
            "module.main.module.network.google_compute_region_network_endpoint_group.driplet_service_neg",
            "module.main.module.network.google_compute_target_https_proxy.driplet_https_proxy",
            "module.main.module.network.google_compute_url_map.driplet_url_map",
            "module.main.module.secrets.google_secret_manager_secret.oauth2_client_id",
            "module.main.module.secrets.google_secret_manager_secret.oauth2_client_secret",
            "module.main.module.secrets.google_secret_manager_secret.session_secret",
            "module.main.module.secrets.google_secret_manager_secret_iam_member.oauth2_client_id_member",
            "module.main.module.secrets.google_secret_manager_secret_iam_member.oauth2_client_secret_member",
            "module.main.module.secrets.google_secret_manager_secret_iam_member.session_auth_secret"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "driplet_vpc_network",
      "provider": "module.main.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/driplet-core-dev/global/networks/driplet-vpc",
            "mtu": 0,
            "name": "driplet-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1879149307234085039",
            "project": "driplet-core-dev",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/global/networks/driplet-vpc"
          },
          "dependencies": [
            "module.main.module.api.google_project_service.artifact_registry",
            "module.main.module.api.google_project_service.bigquery",
            "module.main.module.api.google_project_service.cloud_run",
            "module.main.module.api.google_project_service.cloud_sql",
            "module.main.module.api.google_project_service.compute",
            "module.main.module.api.google_project_service.iam",
            "module.main.module.api.google_project_service.pubsub",
            "module.main.module.api.google_project_service.secret_manager",
            "module.main.module.api.google_project_service.service_networking"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "driplet_vpc_subnet",
      "provider": "module.main.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-14T11:58:16.739-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/driplet-core-dev/regions/europe-west1/subnetworks/driplet-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "driplet-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/global/networks/driplet-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "driplet-core-dev",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/regions/europe-west1/subnetworks/driplet-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.main.module.api.google_project_service.artifact_registry",
            "module.main.module.api.google_project_service.bigquery",
            "module.main.module.api.google_project_service.cloud_run",
            "module.main.module.api.google_project_service.cloud_sql",
            "module.main.module.api.google_project_service.compute",
            "module.main.module.api.google_project_service.iam",
            "module.main.module.api.google_project_service.pubsub",
            "module.main.module.api.google_project_service.secret_manager",
            "module.main.module.api.google_project_service.service_networking",
            "module.main.module.network.google_compute_network.driplet_vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.network",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "driplet_http_proxy",
      "provider": "module.main.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-14T13:00:39.531-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/driplet-core-dev/global/targetHttpProxies/http-proxy",
            "name": "http-proxy",
            "project": "driplet-core-dev",
            "proxy_bind": false,
            "proxy_id": 3310992331709864472,
            "self_link": "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/global/targetHttpProxies/http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/global/urlMaps/driplet-url-map"
          },
          "dependencies": [
            "module.main.module.api.google_project_service.artifact_registry",
            "module.main.module.api.google_project_service.bigquery",
            "module.main.module.api.google_project_service.cloud_run",
            "module.main.module.api.google_project_service.cloud_sql",
            "module.main.module.api.google_project_service.compute",
            "module.main.module.api.google_project_service.iam",
            "module.main.module.api.google_project_service.pubsub",
            "module.main.module.api.google_project_service.secret_manager",
            "module.main.module.api.google_project_service.service_networking",
            "module.main.module.compute.google_cloud_run_v2_service.driplet_service",
            "module.main.module.database.google_sql_database_instance.driplet_application_db",
            "module.main.module.database.google_sql_user.driplet_application_db_user",
            "module.main.module.database.random_password.driplet_application_db_password",
            "module.main.module.iam.google_service_account.driplet_service_account",
            "module.main.module.network.google_compute_backend_service.driplet_backend",
            "module.main.module.network.google_compute_region_network_endpoint_group.driplet_service_neg",
            "module.main.module.network.google_compute_url_map.driplet_url_map",
            "module.main.module.secrets.google_secret_manager_secret.oauth2_client_id",
            "module.main.module.secrets.google_secret_manager_secret.oauth2_client_secret",
            "module.main.module.secrets.google_secret_manager_secret.session_secret",
            "module.main.module.secrets.google_secret_manager_secret_iam_member.oauth2_client_id_member",
            "module.main.module.secrets.google_secret_manager_secret_iam_member.oauth2_client_secret_member",
            "module.main.module.secrets.google_secret_manager_secret_iam_member.session_auth_secret"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.network",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "driplet_https_proxy",
      "provider": "module.main.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-14T13:00:39.590-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/driplet-core-dev/global/targetHttpsProxies/driplet-https-proxy",
            "name": "driplet-https-proxy",
            "project": "driplet-core-dev",
            "proxy_bind": false,
            "proxy_id": 2864095568607304216,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/global/targetHttpsProxies/driplet-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/global/sslCertificates/driplet-ssl-cert"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/global/urlMaps/driplet-url-map"
          },
          "dependencies": [
            "module.main.module.api.google_project_service.artifact_registry",
            "module.main.module.api.google_project_service.bigquery",
            "module.main.module.api.google_project_service.cloud_run",
            "module.main.module.api.google_project_service.cloud_sql",
            "module.main.module.api.google_project_service.compute",
            "module.main.module.api.google_project_service.iam",
            "module.main.module.api.google_project_service.pubsub",
            "module.main.module.api.google_project_service.secret_manager",
            "module.main.module.api.google_project_service.service_networking",
            "module.main.module.compute.google_cloud_run_v2_service.driplet_service",
            "module.main.module.database.google_sql_database_instance.driplet_application_db",
            "module.main.module.database.google_sql_user.driplet_application_db_user",
            "module.main.module.database.random_password.driplet_application_db_password",
            "module.main.module.iam.google_service_account.driplet_service_account",
            "module.main.module.network.google_compute_backend_service.driplet_backend",
            "module.main.module.network.google_compute_managed_ssl_certificate.driplet_ssl_cert",
            "module.main.module.network.google_compute_region_network_endpoint_group.driplet_service_neg",
            "module.main.module.network.google_compute_url_map.driplet_url_map",
            "module.main.module.secrets.google_secret_manager_secret.oauth2_client_id",
            "module.main.module.secrets.google_secret_manager_secret.oauth2_client_secret",
            "module.main.module.secrets.google_secret_manager_secret.session_secret",
            "module.main.module.secrets.google_secret_manager_secret_iam_member.oauth2_client_id_member",
            "module.main.module.secrets.google_secret_manager_secret_iam_member.oauth2_client_secret_member",
            "module.main.module.secrets.google_secret_manager_secret_iam_member.session_auth_secret"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.network",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "driplet_url_map",
      "provider": "module.main.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-14T13:00:28.072-08:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "",
                "strip_query": true
              }
            ],
            "description": "",
            "fingerprint": "B6nsvwyRsow=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "catch-all"
              }
            ],
            "id": "projects/driplet-core-dev/global/urlMaps/driplet-url-map",
            "map_id": 6014141634237422083,
            "name": "driplet-url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/global/backendServices/driplet-cloud-run-backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "catch-all",
                "path_rule": [],
                "route_rules": []
              }
            ],
            "project": "driplet-core-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/driplet-core-dev/global/urlMaps/driplet-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.module.api.google_project_service.artifact_registry",
            "module.main.module.api.google_project_service.bigquery",
            "module.main.module.api.google_project_service.cloud_run",
            "module.main.module.api.google_project_service.cloud_sql",
            "module.main.module.api.google_project_service.compute",
            "module.main.module.api.google_project_service.iam",
            "module.main.module.api.google_project_service.pubsub",
            "module.main.module.api.google_project_service.secret_manager",
            "module.main.module.api.google_project_service.service_networking",
            "module.main.module.compute.google_cloud_run_v2_service.driplet_service",
            "module.main.module.database.google_sql_database_instance.driplet_application_db",
            "module.main.module.database.google_sql_user.driplet_application_db_user",
            "module.main.module.database.random_password.driplet_application_db_password",
            "module.main.module.iam.google_service_account.driplet_service_account",
            "module.main.module.network.google_compute_backend_service.driplet_backend",
            "module.main.module.network.google_compute_region_network_endpoint_group.driplet_service_neg",
            "module.main.module.secrets.google_secret_manager_secret.oauth2_client_id",
            "module.main.module.secrets.google_secret_manager_secret.oauth2_client_secret",
            "module.main.module.secrets.google_secret_manager_secret.session_secret",
            "module.main.module.secrets.google_secret_manager_secret_iam_member.oauth2_client_id_member",
            "module.main.module.secrets.google_secret_manager_secret_iam_member.oauth2_client_secret_member",
            "module.main.module.secrets.google_secret_manager_secret_iam_member.session_auth_secret"
          ]
        }
      ]
    }
  ]
}